New ARC/WARC extraction method (using JWAT library) works